--- a/PortfolioBackend/PortfolioBackend.csproj
+++ b/PortfolioBackend/PortfolioBackend.csproj
@@ -13,5 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="9.0.2" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.2.1" />
+    <PackageReference Include="AWSSDK.SimpleEmail" Version="4.0.0.15" />
   </ItemGroup>
 </Project>
