--- a/.github/workflows/.githubworkflowsdeploy.yml
+++ b/.github/workflows/.githubworkflowsdeploy.yml
@@ -22,6 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build project
+        working-directory: ./client
         run: npm run build
 
       - name: Deploy to S3
