Set install dependencies to client

--- a/.github/workflows/.githubworkflowsdeploy.yml
+++ b/.github/workflows/.githubworkflowsdeploy.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
+        working-directory: ./client
         run: npm ci
 
       - name: Build project
