--- a/.github/workflows/.githubworkflowsdeploy.yml
+++ b/.github/workflows/.githubworkflowsdeploy.yml
@@ -19,11 +19,9 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        working-directory: ./client
         run: npm ci
 
       - name: Build project
-        working-directory: ./client
         run: npm run build
 
       - name: Deploy to S3
@@ -35,7 +33,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: ./dist
+          SOURCE_DIR: ./client/dist
 
       - name: Invalidate CloudFront (optional)
         uses: chetan/invalidate-cloudfront-action@v2
