--- a/.github/workflows/.githubworkflowsdeploy.yml
+++ b/.github/workflows/.githubworkflowsdeploy.yml
@@ -19,9 +19,11 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
+        working-directory: ./client
         run: npm ci
 
       - name: Build project
+        working-directory: ./client
         run: npm run build
 
       - name: Deploy to S3
